<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FleetChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_gcm">Hello gcm!</string>
    <string name="action_settings">Settings</string>

    <!-- qr code fragment -->
    <string name="qrcode_fragment_tv">Permission</string>
    <string name="qrcode_fragment_rb1">permenant</string>
    <string name="qrcode_fragment_rb2">limited</string>
    <string name="qrcode_fragment_ch1">Addable in limited time</string>
    <string name="qrcode_fragment_btn">Generate QR code</string>

    <string name="qrcode_fragment_dialog_title">Verification of invitaion</string>
    <string name="qrcode_fragment_dialog_date1">This friendship will end on: </string>
    <string name="qrcode_fragment_dialog_date2">This verification will expire on: </string>
    <string name="qrcode_fragment_dialog_btn1">OK</string>
    
    <!-- chat_room.xml -->
    <string name="chat_room_btn">Send</string>
    <string name="chat_room_et1">Type here</string>
    
    <!-- nfc fragment -->
    <string name="nfcpush_fragment_tv">Permission</string>
    <string name="nfcpush_fragment_rb1">permenant</string>
    <string name="nfcpush_fragment_rb2">limited</string>
    <string name="nfcpush_fragment_ch1">Addable in limited time</string>
    <string name="nfcpush_fragment_btn">Start NFC delivery</string>
    <string name="nfcpush_fragment_tvstatus">NFC status:</string>
    
    <!-- settings fragment -->
    <string name="settings_fragment_title">Personal settings</string>
    <string name="settings_fragment_sethead">click to set portrait</string>
    <string name="settings_fragment_name">Your name: </string>
    <string name="settings_fragment_email">Your email: </string>
    <string name="settings_fragment_portrait">Select your portrait </string>
    <string name="settings_fragment_dialog_btn">OK </string>

</resources>