<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_fragment_tv"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioGroup
                    android:id="@+id/qrcode_fragment_radioGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/qrcode_fragment_radio0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/qrcode_fragment_rb1" />

                    <RadioButton
                        android:id="@+id/qrcode_fragment_radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/qrcode_fragment_rb2" />
                </RadioGroup>
            </LinearLayout>

            <DatePicker
                android:id="@+id/qrcode_fragment_datePicker1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:endYear="2030"
                android:spinnersShown="true"
                android:startYear="2014" />

            <CheckBox
                android:id="@+id/qrcode_fragment_checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_fragment_ch1" />

            <DatePicker
                android:id="@+id/qrcode_fragment_datePicker2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:endYear="2030"
                android:spinnersShown="true"
                android:startYear="2014" />

            <TimePicker
                android:id="@+id/qrcode_fragment_timePicker1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/qrcode_fragment_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_fragment_btn" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>